<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Nandi</string>
    <string name="localhost">http://3.15.16.79:3001</string>
    <string name="default_notification_channel_id">Welcome to Sugandh</string>
    <string name="authToken">authToken</string>
    <string name="appdesc">Taking your prayers in your voice to your deity. \nFrom anywhere, anytime.</string>
    <string name="splash_screen_desc">some description</string>
    <string name="splash_screen_flashing_msg">flashing msg</string>
    <string name="splash_screen_name">NANDI</string>
    <string name="login_screen_app_name">Nandi</string>
    <string name="login_screen_desc">Taking your prayers in your voice to your deity. \nFrom anywhere, anytime.</string>
    <string name="home_screen_top_bar">NANDI</string>
    <string name="place_order_screen_bottom_bar_text_to_select_type">SELECT PRAYER TYPE</string>
    <string name="info_screen_bottom_bar_text_to_send_order">SEND A VOICE PRAYER</string>
    <string name="preview_order_screen_bottom_bar_text">send my prayer</string>
    <string name="receipt_screen_text">Your prayer will be played at</string>
    <string name="toast_login_number_not_registered">Welcome to Nandi !</string>
    <string name="toast_otp_incorrect">OTP incorrect. Please enter again.</string>
    <string name="toast_signup_invalid_email">Please enter a valid email address</string>
    <string name="toast_signup_compulsory_fields_not_filled">Please enter your name</string>
    <string name="toast_dist_list_first_time_login">Welcome to Nandi! Your prayers in your voice to your deity. From anywhere, anytime.</string>
    <string name="dist_list_signout_alert">Are you sure you want to sign-out? You can sign-in again just using your mobile number.</string>
    <string name="toast_dist_list_refreshed">All updated!</string>
    <string name="toast_dist_list_nothing_found">No results found. Please check the spelling or try a different search.</string>
    <string name="toast_place_order_screen_recording_complete">Prayer recorded. Tap on Next.</string>
    <string name="toast_preview_screen_order_sent">Congratulations! Your prayer has been sent.</string>
    <string name="toast_wallet_money_added">successfully added to your wallet</string>
    <string name="toast_my_profile_profile_updated">Profile successfully updated!</string>
    <string name="toast_receipts_screen_refreshed">All updated!</string>
    <string name="toast_wallet_adding_money">Adding money</string>
    <string name="toast_preview_screen_sending_order">Sending your prayer</string>
    <string name="splash_screen_welcome_text">your prayers in your voice to your deity anywhere, anytime</string>
    <string name="place_order_permission_denied">We need to record your voice to send your prayer! Please allow recording to continue.</string>
    <string name="place_order_camera_permission_denied">Please allow taking pictures through your phone\'s camera to continue.</string>
    <string name="signing_out">Signing Out...</string>
    <string name="creating_wallet_for_you"></string>
    <string name="logging_in">Logging In...</string>
    <string name="sending_otp">Sending OTP...</string>
    <string name="verifying">Verifying OTP...</string>
    <string name="loading">Loading...</string>
    <string name="registering">Registering you on Nandi...</string>
    <string name="creating_order">Preparing to send...</string>
    <string name="sending_order">Sending your prayer...</string>
    <string name="adding_amount">Adding amount...</string>
    <string name="saving_user_data">Saving your information...</string>
    <string name="updating_user_info">Updating your information...</string>
    <string name="home_screen_storage_permission_denied">Please allow the storage of files on your phone to move ahead.</string>
    <string name="no_internet_connection_snackbar">NO INTERNET CONNECTION</string>
    <string name="about_us">&lt;p&gt;&lt;strong&gt;The Nandi App&lt;/strong&gt;&lt;/p&gt; &lt;p&gt;Nandi connects you to the divine whenever you want and from wherever you are. It offers a two-way communication between you and your beloved deities in the most respected and reputed temples, shrines and spiritual centres of the world. It sends your prayers in your voice along with your picture to your favourite temples across India and plays them there in front of the deities in a quiet manner so that your privacy and confidentiality are not breached at all. The temple sends its blessings for you and your family through audio, video and pictures in the App.&lt;/p&gt; &lt;p&gt;The name Nandi is inspired by the revered Nandi Bull, the guardian of Kailash Parvat and the mount of Lord Shiva, who also serves as a messenger to Shiva and it is believed that any prayer spoken in His ears reaches the Lord directly.&amp;nbsp;&lt;/p&gt; &lt;p&gt;&lt;strong&gt;Our Mission&lt;/strong&gt;&lt;/p&gt; &lt;p&gt;Nandi has been imagined with the desire to bring millions of devotees closer to their faith by connecting them to their most revered places directly. We wish to bridge the gap between the devotee and the divine that gets created due to our busy lifestyles, our distances from our deities or age and inability factors. Nandi wishes to connect the devotee to their deity from anywhere in the world and anytime.&lt;/p&gt; &lt;p&gt;&lt;strong&gt;Our Team&lt;/strong&gt;&lt;/p&gt; &lt;p&gt;There is a highly passionate team of young professionals working towards making Nandi successful in its mission. If you have any questions, suggestions or wish to share your Nandi story with us, we welcome you to write to us at &lt;strong&gt;namaskarnandi@gmail.com&lt;/strong&gt;.&lt;/p&gt;</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="birthday_text">Tell us your birthday and get special offers !</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="switch_camera">Switch camera</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="start_record_video">record  video</string>
    <string name="stop_record_video">stop record</string>
    <string name="send_my_prayer">SEND MY PRAYER</string>
    <string name="send_order_with_amount">Send my prayer with</string>
    <string name="offering">offering</string>
    <string name="addWallet">Add Wallet</string>
    <string name="sucessfully_verified">has been successfully verified</string>
    <string name="otpsentmsg">We\'ve sent you a One-Time Password on</string>
    <string name="resendOtpIn">Resend OTP in</string>
    <string name="resendOtpNow">Resend OTP Now</string>
    <string name="willBePlayedAt">Your prayer will be played at</string>
    <string name="pleasewait_loading">Please wait. Loading...</string>
    <string name="aboutNandi">About Nandi</string>
    <string name="myProfile">My Profile</string>
    <string name="myWallet">My Wallet</string>
    <string name="signOut">Sign Out</string>
    <string name="add_money">Add Money</string>
    <string name="noAmountAddedMessage">Please add an amount </string>
    <string name="shareMyLoc">Share my location and get the best offers</string>
    <string name="chooseLanguage">Choose Language</string>
    <string name="add_money_to_wallet">Add money to wallet</string>
    <string name="please_choose_language">Please choose a language</string>
    <string name="save">SAVE</string>
    <string name="spotLightTextStopRecordingMidway">Stop Recording Midway</string>
    <string name="spotLightTextStopRecordingMidwayMessage">You can tap here to stop recording midway</string>
    <string name="spotLightTextPreviewPrayer">Preview Prayer</string>
    <string name="spotLightTextPreviewPrayerMessage">You can listen to your recorded prayer here. It is not yet sent, tap Next to move ahead.</string>
    <string name="spotLightTextMoveAhead">Move ahead</string>
    <string name="spotLightTextMoveAheadMessage">Tap on Next to move ahead to take your photo for the prayer</string>
    <string name="spotLightTextPrayerDuration">Prayer duration</string>
    <string name="spotLightTextPrayerDurationMessage">Here you can see the duration available for your prayer. It changes with the prayer type you choose.</string>
    <string name="spotLightTextRecordPrayer">Record Prayer</string>
    <string name="spotLightTextRecordPrayerMessage">Tap here to record your prayer</string>
    <string name="spotLightTextSelectType">Offering Type</string>
    <string name="spotLightTextSelectTypeMessage">Choose your desired offering type and duration of prayer from these options</string>
    <string name="spotLightTextPreview">Preview</string>
    <string name="spotLightTextPreviewMessage">You can preview your recorded prayer and clicked picture here</string>
    <string name="spotLightTextReadyToSend">Ready to send!</string>
    <string name="spotLightTextReadyToSendMessage">Tap here to send your recorded prayer and picture to the temple.</string>
    <string name="spotLightTextLiveExperience">Live experience</string>
    <string name="spotLightTextLiveExperienceMessage">Tap here to listen to your sent prayer. Come back here when your prayer gets played for a live experience!</string>
    <string name="spotLightTextReceipt">Temple Blessings</string>
    <string name="spotLightTextReceiptMessage">Tap here to listen to your received blessings</string>
    <string name="receiptButton">MY PRAYERS</string>
    <string name="recordingFadeInOutMessage">Recording</string>
    <string name="rerecordButton">Re-record</string>
    <string name="nextButton">Next</string>
    <string name="previewText">PREVIEW</string>
    <string name="skipButton">SKIP</string>
    <string name="playPreviewMessage">Listen to your prayer before sending</string>
    <string name="prayerSentMessageReceiptScreen">Prayer Sent!</string>
    <string name="walletText">Wallet</string>
    <string name="noSearchResultFound">No results found. Please check the spelling or try a different search.</string>
    <string name="allowPermissionMessageHomeScreen">Allow permissions to start.</string>
    <string name="noOrdersAvailable">All your prayers and blessings received from the temple will appear here. \n\n You can tap on the \’+\’ button below to start sending your prayers!</string>
    <string name="currentBalance">CURRENT BALANCE</string>
    <string name="payOnline">PAY ONLINE</string>
    <string name="select">SELECT</string>
    <string name="continueBtn">CONTINUE</string>
    <string name="enterBtn">ENTER</string>
    <string name="search_hint_mannual">Search...</string>
    <string name="alertMessageAfterRecordingBackPressed">Your recorded prayer will be deleted if you go back. Are you sure you want to go back?</string>
    <string name="alertDialogGoBack">YES</string>
    <string name="alertDialogCancel">NO</string>
    <string name="verifyingOTPfadeInOutMessage">Attempting to verify OTP automatically</string>
    <string name="verificationMsgOTPtimeExceed">Please enter OTP manually</string>

</resources>